--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
   "framework": "vite",
-  "installCommand": "npm install --prefix client",
+  "installCommand": "npm install && npm install --prefix client",
   "buildCommand": "npm run build --prefix client",
   "outputDirectory": "client/dist",
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/index.js"
+    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
